--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "bleuauction_fe"]
 	path = bleuauction_fe
 	url = https://github.com/NC7-BleuAuction/bleuauction_fe.git
+	branch = dev
 [submodule "bleuauction_be"]
 	path = bleuauction_be
 	url = https://github.com/NC7-BleuAuction/bleuauction_be.git
+	branch = dev
